--- a/vc-web/vc-web-front/src/main/resources/public/monitor/map/vehiclemonitor.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/map/vehiclemonitor.html
@@ -15,7 +15,7 @@
   <link href="/css/style.min.css?v=4.0.0" rel="stylesheet">
   <link href="/css/font-awesome.min.css?v=4.4.0" rel="stylesheet">
   <link rel="stylesheet" href="/layui/css/layui.css?t=1510164124207" media="all">
-  <link href="/css/plugins/jqgrid/ui.jqgrid.css?0820" rel="stylesheet">		<!-- jqgrid-->
+  <link href="/css/plugins/jqgrid/ui.jqgrid.css?0820" rel="stylesheet">    <!-- jqgrid-->
   <link href="/css/cnmain.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/css/map/index.css">
 </head>
@@ -24,30 +24,12 @@
 <div id="outer-box">
   <div id="container" tabindex="0"></div>
   <div id="panel" class="scrollbar1">
-    <input  name="cssCarEquals" placeholder="请输入关键字" class="form-control searchinput"  dataWhere=""  dataUrl="/admin/vehicle/query">
+    <input style="margin-top: 16px;" name="cssCarEquals" placeholder="请输入车架号"
+           class="form-control searchinput" dataWhere="" dataUrl="/admin/vehicle/query">
+    <div id="test1" style="height: 45px;"></div>
     <ul id="myList">
     </ul>
   </div>
-  <ul id="btnList">
-    <li>
-      <input value="美食数据" type="button" data-path="//a.amap.com/amap-ui/static/data/restaurant.json" />
-    </li>
-    <li>
-      <input value="酒店数据" type="button" data-path="//a.amap.com/amap-ui/static/data/hotel.json" />
-    </li>
-    <li>
-      <input value="选中第一个" type="button" data-enable='markerList.getData().length>0' data-eval='markerList.selectByDataIndex(0)' />
-    </li>
-    <li>
-      <input value="选中最后一个" type="button" data-enable='markerList.getData().length>0' data-eval='markerList.selectByDataReverseIndex(0)' />
-    </li>
-    <li>
-      <input value="清除选中" type="button" data-enable='!!markerList.getSelectedDataId()' data-eval='markerList.clearSelected()' />
-    </li>
-    <li>
-      <input value="清除数据" type="button" data-enable='markerList.getData().length>0' data-eval='markerList.clearData()' />
-    </li>
-  </ul>
 </div>
 <script src="/js/jquery.min.js?v=2.1.4"></script>
 <script src="/js/bootstrap.min.js?v=3.3.5"></script>
@@ -61,13 +43,22 @@
 <script src="/js/tpui-core.js"></script>
 <script src="/js/plugins/jqgrid/i18n/grid.locale-cn.js"></script>
 <script src="/js/plugins/jqgrid/jquery.jqGrid.min.js"></script>
+<script src="/layui/layui.all.js?t=1510164124207"></script>
 
-<script type="text/javascript" src='//webapi.amap.com/maps?v=1.4.2&key=dff38aa9299fe308a8a106d8a1e3312f'></script>
+<script src="/js/map/coordtransform.js"></script>
+<script src="/js/moment.js"></script>
+<script src="/js/timeago.min.js"></script>
+<script type="text/javascript"
+        src='//webapi.amap.com/maps?v=1.4.2&key=dff38aa9299fe308a8a106d8a1e3312f'></script>
 <!-- UI组件库 1.0 -->
 <script src="//webapi.amap.com/ui/1.0/main.js?v=1.0.11"></script>
 
 <script type="text/javascript">
-  $(".searchinput").each(function(){
+  var limitSize = 10, params = {page: 1, rows: limitSize, sidx: 'cssAddTime', sord: 'desc'};
+  var url = getServUrl("/monitor/state/list");
+  var laypage;
+
+  $(".searchinput").each(function () {
     $(this).searchinput({});
   });
   //创建地图
@@ -75,8 +66,14 @@
     zoom: 9
   });
 
+  var timeagoInstance = new timeago();
+
+  layui.use('laypage', function () {
+    laypage = layui.laypage;
+  });
+
   AMapUI.loadUI(['misc/MarkerList', 'overlay/SimpleMarker', 'overlay/SimpleInfoWindow'],
-      function(MarkerList, SimpleMarker, SimpleInfoWindow) {
+      function (MarkerList, SimpleMarker, SimpleInfoWindow) {
 
         //即jQuery/Zepto
         var $ = MarkerList.utils.$;
@@ -93,32 +90,31 @@
           //选中后显示
 
           //从数据中读取位置, 返回lngLat
-          getPosition: function(item) {
-            return [item.longitude, item.latitude];
+          getPosition: function (item) {
+            return coordtransform.wgs84togcj02(item.cssLongitude, item.cssLatitude);
           },
           //数据ID，如果不提供，默认使用数组索引，即index
-          getDataId: function(item, index) {
-
-            return item.id;
+          getDataId: function (item, index) {
+            return item.cssId;
           },
-          getInfoWindow: function(data, context, recycledInfoWindow) {
+          getInfoWindow: function (data, context, recycledInfoWindow) {
 
             if (recycledInfoWindow) {
 
-              recycledInfoWindow.setInfoTitle(data.name);
-              recycledInfoWindow.setInfoBody(data.address);
+              recycledInfoWindow.setInfoTitle(data.cssNumber);
+              recycledInfoWindow.setInfoBody(data.cssCarText);
 
               return recycledInfoWindow;
             }
 
             return new SimpleInfoWindow({
-              infoTitle: data.name,
-              infoBody: data.address,
+              infoTitle: data.cssNumber,
+              infoBody: data.cssCarText,
               offset: new AMap.Pixel(0, -37)
             });
           },
           //构造marker用的options对象, content和title支持模板，也可以是函数，返回marker实例，或者返回options对象
-          getMarker: function(data, context, recycledMarker) {
+          getMarker: function (data, context, recycledMarker) {
 
             var label = String.fromCharCode('A'.charCodeAt(0) + context.index);
 
@@ -134,29 +130,57 @@
             });
           },
           //构造列表元素，与getMarker类似，可以是函数，返回一个dom元素，或者模板 html string
-          getListElement: function(data, context, recycledListElement) {
+          getListElement: function (data, context, recycledListElement) {
 
             var label = String.fromCharCode('A'.charCodeAt(0) + context.index);
 
-            //使用模板创建
-            var innerHTML = MarkerList.utils.template('<div class="poi-imgbox">' +
-                '    <span class="poi-img" style="background-image:url(<%- data.pic %>)"></span>' +
-                '</div>' +
-                '<div class="poi-info-left">' +
-                '    <h3 class="poi-title">' +
-                '        <%- label %>. <%- data.name %>' +
-                '    </h3>' +
-                '    <div class="poi-info">' +
-                '        <span class="poi-price">' +
-                '            <%= data.price %>' +
-                '        </span>' +
-                '        <p class="poi-addr"><%- data.address %></p>' +
-                '    </div>' +
-                '</div>' +
-                '<div class="clear"></div>', {
-              data: data,
-              label: label
-            });
+            var addTimeText = timeagoInstance.format(data.cssAddTime, 'zh_CN');
+            var innerHTML;
+
+            var durationMin = moment().diff(moment(data.cssAddTime), 'minutes');
+            if (durationMin <= 10) {
+              //使用模板创建
+              innerHTML = MarkerList.utils.template(
+                  '<div class="poi-info-left">' +
+                  '    <h3 class="poi-title">' +
+                  '        <%- label %>. <%- data.cssNumber %> ' +
+                  '    <font color="#66aa00" style="font-weight: bold">在线</font>' +
+                  '    </h3>' +
+                  '    <div class="poi-info">' +
+                  '        <span class="poi-price">' +
+                  '            <%= data.cssCarText %>' +
+                  '        </span>' +
+                  '        <p class="poi-addr">累计里程：<%- data.cssObdMile %> km</p>' +
+                  '        <p class="poi-addr" title="<%- data.cssAddTime %>">最后报文时间：<%- addTimeText %></p>'
+                  +
+                  '    </div>' +
+                  '</div>', {
+                    data: data,
+                    label: label,
+                    addTimeText: addTimeText,
+                  });
+            } else {
+              //使用模板创建
+              innerHTML = MarkerList.utils.template(
+                  '<div class="poi-info-left">' +
+                  '    <h3 class="poi-title">' +
+                  '        <%- label %>. <%- data.cssNumber %> ' +
+                  '    <font color="#f00" style="font-weight: bold">离线</font>' +
+                  '    </h3>' +
+                  '    <div class="poi-info">' +
+                  '        <span class="poi-price">' +
+                  '            <%= data.cssCarText %>' +
+                  '        </span>' +
+                  '        <p class="poi-addr">累计里程：<%- data.cssObdMile %> km</p>' +
+                  '        <p class="poi-addr"  title="<%- data.cssAddTime %>">最后报文时间：<%- addTimeText %></p>'
+                  +
+                  '    </div>' +
+                  '</div>', {
+                    data: data,
+                    label: label,
+                    addTimeText: addTimeText,
+                  });
+            }
 
             if (recycledListElement) {
               recycledListElement.innerHTML = innerHTML;
@@ -178,9 +202,7 @@
 
         window.markerList = markerList;
 
-        markerList.on('selectedChanged', function(event, info) {
-
-          checkBtnStats();
+        markerList.on('selectedChanged', function (event, info) {
 
           if (info.selected) {
 
@@ -206,7 +228,7 @@
           }
         });
 
-        markerList.on('listElementMouseenter markerMouseover', function(event, record) {
+        markerList.on('listElementMouseenter markerMouseover', function (event, record) {
 
           if (record && record.marker) {
 
@@ -223,7 +245,7 @@
           }
         });
 
-        markerList.on('listElementMouseleave markerMouseout', function(event, record) {
+        markerList.on('listElementMouseleave markerMouseout', function (event, record) {
 
           if (record && record.marker) {
 
@@ -235,24 +257,57 @@
         });
 
         //数据输出完成
-        markerList.on('renderComplete', function(event, records) {
-
-          checkBtnStats();
+        markerList.on('renderComplete', function (event, records) {
+//          checkBtnStats();
         });
 
-        // markerList.on('*', function(type, event, res) {
-        //     console.log(type, event, res);
-        // });
+        var $vinId = $("input[name='cssCarEquals']");
+
+        $vinId.on('input', function (e) {
+          // 这里可以写你想要的验证代码；
+//          alert($vinId.val());
+          if ($vinId.val() === '') {
+            params.page = 1;
+            params.cssCarEquals = undefined;
+            loadData(url);
+          } else {
+            params.page = 1;
+            params.cssCarEquals = $vinId.val();
+            loadData(url);
+          }
+        });
+
+        loadData(url);
 
         //加载数据
         function loadData(src, callback) {
 
-          $.getJSON(src, function(data) {
+          $.getJSON(src, params, function (data) {
 
             markerList._dataSrc = src;
 
             //渲染数据
-            markerList.render(data);
+            markerList.render(data.data);
+
+            //执行一个laypage实例
+            laypage.render({
+              elem: 'test1' //注意，这里的 test1 是 ID，不用加 # 号
+              , count: data.count || 0//数据总数，从服务端得到
+              , limit: limitSize
+              , layout: ['prev', 'next']
+              , jump: function (obj, first) {
+                //obj包含了当前分页的所有参数，比如：
+                console.log(obj.curr); //得到当前页，以便向服务端请求对应页的数据。
+                console.log(obj.limit); //得到每页显示的条数
+
+                //首次不执行
+                if (!first) {
+                  //do something
+                  params.page = obj.curr;
+                  pageLoadData(url);
+                }
+              }
+            });
 
             if (callback) {
               callback(null, data);
@@ -260,39 +315,21 @@
           });
         }
 
-        var $btns = $('#btnList input[data-path]');
+        //加载数据
+        function pageLoadData(src, callback) {
 
-        /**
-         * 检测各个button的状态
-         */
-        function checkBtnStats() {
-          $('#btnList input[data-enable]').each(function() {
+          $.getJSON(src, params, function (data) {
 
-            var $input = $(this),
-                codeEval = $input.attr('data-enable');
+            markerList._dataSrc = src;
 
-            $input.prop({
-              disabled: !eval(codeEval)
-            });
+            //渲染数据
+            markerList.render(data.data);
+
+            if (callback) {
+              callback(null, data);
+            }
           });
         }
-
-        $('#btnList').on('click', 'input', function() {
-
-          var $input = $(this),
-              dataPath = $input.attr('data-path'),
-              codeEval = $input.attr('data-eval');
-
-          if (dataPath) {
-            loadData(dataPath);
-          } else if (codeEval) {
-            eval(codeEval);
-          }
-
-          checkBtnStats();
-        });
-
-        loadData($btns.attr('data-path'));
 
         function forcusMarker(marker) {
           marker.setTop(true);
@@ -311,8 +348,10 @@
           return (
               rect.top >= 0 &&
               rect.left >= 0 &&
-              rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) && /*or $(window).height() */
-              rect.right <= (window.innerWidth || document.documentElement.clientWidth) /*or $(window).width() */
+              rect.bottom <= (window.innerHeight || document.documentElement.clientHeight)
+              && /*or $(window).height() */
+              rect.right <= (window.innerWidth
+                  || document.documentElement.clientWidth) /*or $(window).width() */
           );
         }
 
@@ -325,13 +364,12 @@
           //闪动一下
           $listEle
           .one('webkitAnimationEnd oanimationend msAnimationEnd animationend',
-              function(e) {
+              function (e) {
                 $(this).removeClass('flash animated');
               }).addClass('flash animated');
         }
-
-
       });
+
 </script>
 </body>
 
