--- a/vc-web/vc-web-front/src/main/resources/public/monitor/map/history.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/map/history.html
@@ -20,18 +20,80 @@
     #loadingTip {
       position: absolute;
       z-index: 9999;
-      top: 0;
+      top: 55px;
       left: 0;
       padding: 3px 10px;
       background: red;
       color: #fff;
       font-size: 14px;
     }
+
+    #operateContainer {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      width: 100%;
+      overflow: auto;
+      height: 50px;
+      z-index: 999;
+      border-left: 1px solid #eaeaea;
+      background: #fff;
+    }
   </style>
+  <link href="/css/bootstrap.min.css?v=3.3.5" rel="stylesheet">
+  <link href="/css/plugins/iCheck/custom.css" rel="stylesheet">
+  <link href="/css/plugins/sweetalert/sweetalert.css" rel="stylesheet">
+  <link href="/css/animate.min.css" rel="stylesheet">
+  <link href="/css/style.min.css?v=4.0.0" rel="stylesheet">
+  <link href="/css/font-awesome.min.css?v=4.4.0" rel="stylesheet">
+  <link rel="stylesheet" href="/layui/css/layui.css?t=1510164124207" media="all">
+  <link href="/css/plugins/jqgrid/ui.jqgrid.css?0820" rel="stylesheet">    <!-- jqgrid-->
+  <link href="/css/cnmain.css" rel="stylesheet">
 </head>
 
 <body>
 <div id="container"></div>
+<div id="operateContainer">
+  <form class="form-horizontal queryform">
+    <dl>
+      <dt>车辆</dt>
+      <dd>
+        <input name="cssCarEquals" placeholder="请输入VIN" class="form-control searchinput"
+               dataWhere=""
+               dataUrl="/admin/vehicle/query"></dd>
+    </dl>
+    <dl>
+      <dt>轨迹时间</dt>
+      <dd class="timergroup">
+        <input name="cssCurrentTimeStart" placeholder="开始时间" class="form-control timegroupinput"
+               onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
+        <label class="timegrouplabel">-</label>
+        <input name="cssCurrentTimeEnd" placeholder="结束时间" class="form-control timegroupinput"
+               onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})"></dd>
+    </dl>
+    <div class="querybtns">
+      <button class="btn btn-success " type="button" onclick="operate.query();"><i
+          class="glyphicon fa fa-search"></i>查询
+      </button>
+
+    </div>
+  </form>
+</div>
+<script src="/js/jquery.min.js?v=2.1.4"></script>
+<script src="/js/bootstrap.min.js?v=3.3.5"></script>
+<script src="/js/plugins/jquery-ui/jquery-ui.min.js"></script>
+<script src="/js/jquery.ResizableColumns.js"></script>
+<script src="/js/plugins/layer/laydate/laydate.js"></script>
+<script src="/js/store.js"></script>
+<script src="/js/plugins/sweetalert/sweetalert.min.js"></script>
+<script src="/js/contabs.min.js"></script>
+<script src="/js/layer/layer.js"></script>
+<script src="/js/tpui-core.js"></script>
+<script src="/js/plugins/jqgrid/i18n/grid.locale-cn.js"></script>
+<script src="/js/plugins/jqgrid/jquery.jqGrid.min.js"></script>
+<script src="/layui/layui.all.js?t=1510164124207"></script>
+
 <script type="text/javascript"
         src='//webapi.amap.com/maps?v=1.4.2&key=dff38aa9299fe308a8a106d8a1e3312f'></script>
 <!-- UI组件库 1.0 -->
@@ -55,7 +117,7 @@
 
     var pathSimplifierIns = new PathSimplifier({
       zIndex: 100,
-      //autoSetFitView:false,
+//      autoSetFitView: false,
       map: map, //所属的地图实例
 
       getPath: function (pathData, pathIndex) {
@@ -78,7 +140,7 @@
         getPathStyle: function (pathItem, zoom) {
 
           var color = colors[0],
-              lineWidth = Math.round(4 * Math.pow(1.1, zoom - 3));
+              lineWidth = Math.round(2 * Math.pow(1.1, zoom - 3));
 
           return {
             pathLineStyle: {
@@ -100,11 +162,14 @@
 
     $('<div id="loadingTip">加载数据，请稍候...</div>').appendTo(document.body);
 
-    var navg, total, page_no = 1, page_size = 100, hasMore = true, isFirstLoad = true;
+    var navg, total, page_no = 1, page_size = 300, hasMore = true, isFirstLoad = true;
     var pathObjectArray = [];
     var pathObject = {};
     //设置name
     pathObject.name = '车辆行驶轨迹';
+    pathObject.path = [];
+    //当前仅有1条轨迹信息
+    pathObjectArray.push(pathObject);
 
     loadData();
 
@@ -112,9 +177,9 @@
       $.getJSON(
           'http://192.168.3.148:12006/carhistory/states?order=asc&query_fields=latitude,longitude',
           {
-            cs_number: 'cs_number',
+            cs_number: 'T6722349',
             start_time: '2017-07-01 00:00:00',
-            end_time: '2017-07-30 00:00:00',
+            end_time: '2017-07-03 00:00:00',
             page_no: page_no,
             page_size: page_size
           },
@@ -128,20 +193,29 @@
               return;
             }
 
-            if (d.data.carStateList.length === 0) {
-//              alert("已经没有更多数据！")
-              console.log("已经没有更多数据！")
+            // 判断是否还有更多数据
+            total = d.data.total;
+
+            if (0 === total) {
+//              alert("数据请求异常！")
+              alert.log("没有找到轨迹数据！")
+              hasMore = false;
               return;
             }
 
-            // 判断是否还有更多数据
-            total = d.data.total;
+            if (d.data.carStateList.length === 0) {
+//              alert("已经没有更多数据！")
+              console.log("已经没有更多数据！");
+              hasMore = false;
+              return;
+            }
+
             if (page_no * page_size >= total) {
               hasMore = false;
             }
 
             var pathRoutes = [];
-            var item
+            var item;
             for (var i = 0, len = d.data.carStateList.length; i < len; i++) {
               item = d.data.carStateList[i];
               if (typeof(item.longitude) !== 'undefined' && typeof(item.latitude) !== 'undefined'
@@ -157,10 +231,9 @@
             }
 
             if (isFirstLoad) {
+              isFirstLoad = false;
               //设置path数组
-              pathObject.path = pathRoutes;
-              //当前仅有1条轨迹信息
-              pathObjectArray.push(pathObject);
+              pathObjectArray[0].path = pathObjectArray[0].path.concat(pathRoutes);
 
               pathSimplifierIns.setData(pathObjectArray);
 
@@ -180,7 +253,7 @@
                   //经过路径的样式
                   pathLinePassedStyle: {
                     lineWidth: 6,
-                    strokeStyle: 'blue',
+                    strokeStyle: '#d2d2d2',
                     dirArrowStyle: {
                       stepSpace: 15,
                       strokeStyle: 'red'
@@ -192,18 +265,33 @@
               navg.start();
 
             } else {
-              isFirstLoad = false;
-
               var cursor = navg.getCursor().clone(), //保存巡航器的位置
                   status = navg.getNaviStatus();
 
-              pathObjectArray[0].path = pathRoutes;
+              pathObjectArray[0].path = pathObjectArray[0].path.concat(pathRoutes);
               pathSimplifierIns.setData(pathObjectArray); //延展路径
 
               //重新建立一个巡航器
               navg = pathSimplifierIns.createPathNavigator(0, {
                 //loop: true, //循环播放
                 speed: 1000 //巡航速度，单位千米/小时
+                , pathNavigatorStyle: {
+                  width: 16,
+                  height: 32,
+                  content: PathSimplifier.Render.Canvas.getImageContent('/img/car.png', onload,
+                      onerror),
+                  strokeStyle: null,
+                  fillStyle: null,
+                  //经过路径的样式
+                  pathLinePassedStyle: {
+                    lineWidth: 6,
+                    strokeStyle: 'blue',
+                    dirArrowStyle: {
+                      stepSpace: 15,
+                      strokeStyle: 'red'
+                    }
+                  }
+                }
               });
 
               if (status !== 'stop') {
@@ -238,13 +326,17 @@
           return false;
         }
 
+        page_no++;
+
+        $('<div id="loadingTip">加载数据，请稍候...</div>').appendTo(document.body);
+
         loadData();
 
         return true;
       }
 
       if (doExpand()) {
-        setTimeout(expandPath, 1000);
+        setTimeout(expandPath, 10 * 1000);
       }
     }
 
