--- a/vc-web/vc-web-front/src/main/resources/public/monitor/map/historyDrivepaces.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/map/historyDrivepaces.html
@@ -105,10 +105,6 @@
   var map = new AMap.Map('container', {
     zoom: 10
   });
-  //中国地图范围
-  var posn1 = new AMap.LngLat(115.60, 28.25);
-  var posn2 = new AMap.LngLat(122.65, 33.14);
-  var boundsChina = new AMap.Bounds(posn1, posn2);
 
   AMapUI.load(['ui/misc/PathSimplifier', 'lib/$'], function (PathSimplifier, $) {
 
@@ -165,16 +161,7 @@
 
     window.pathSimplifierIns = pathSimplifierIns;
 
-    var navg, total, hasMore = true, isFirstLoad = true;
-    var params = {
-      cs_number: 'T6401899',
-      page_no: 1,
-      page_size: 300,
-      start_time: '',
-      end_time: '',
-      order: 'asc',
-      query_fields: 'latitude,longitude'
-    };
+    var navg, total, hasMore = true;
 
     var pathObjectArray = [];
     var pathObject = {};
@@ -184,6 +171,9 @@
     //当前仅有1条轨迹信息
     pathObjectArray.push(pathObject);
 
+//    loadData();
+    var params = {cs_number: '', start_time: '', end_time: '', order: 'asc'}
+
     var $vinId = $("input[name='cssNumberEquals']");
     var $startTime = $("input[name='cssCurrentTimeStart']");
     var $endTime = $("input[name='cssCurrentTimeEnd']");
@@ -192,35 +182,25 @@
       // 这里可以写你想要的验证代码；
       if ($vinId.val() !== '') {
         params.cs_number = $vinId.val();
-//        loadData();
+        loadData();
       }
     });
 
-    $('#searchButton').on('click', function () {
-      if (!checkParams()) {
-        return;
-      }
-
-      $('<div id="loadingTip">加载数据，请稍候...</div>').appendTo(document.body);
-
-      loadData();
-
-      expandPath();
-    });
+    $('#searchButton').on('click',loadData);
 
     function checkParams() {
       if ($vinId.val() === '' || typeof($vinId.val()) === 'undefined') {
-        layer.msg('请选择一辆车', {icon: 7, time: 1600});
+        layer.msg('请选择一辆车', {icon: 7, time:1600});
         return false;
       }
 
       if ($startTime.val() === '' || typeof($startTime.val()) === 'undefined') {
-        layer.msg('请选择开始时间', {icon: 7, time: 1600});
+        layer.msg('请选择开始时间', {icon: 7, time:1600});
         return false;
       }
 
       if ($endTime.val() === '' || typeof($endTime.val()) === 'undefined') {
-        layer.msg('请选择结束时间', {icon: 7, time: 1600});
+        layer.msg('请选择结束时间', {icon: 7, time:1600});
         return false;
       }
 //
@@ -239,8 +219,14 @@
     }
 
     function loadData() {
+      if (!checkParams()) {
+        return;
+      }
+
+      $('<div id="loadingTip">加载数据，请稍候...</div>').appendTo(document.body);
+
       $.getJSON(
-          'http://192.168.3.148:12006/carhistory/states',
+          'http://192.168.3.175:12006/carhistory/drivepaces',
           params,
           function (d) {
 
@@ -249,105 +235,66 @@
             if (100000 !== d.code) {
 //              alert("数据请求异常！")
               console.log("数据请求异常！")
+              hasMore = false;
               return;
             }
 
-            // 判断是否还有更多数据
-            total = d.data.total;
+            // 判断是否 有轨迹数据
+            total = d.data.paceList.length;
 
             if (0 === total) {
 //              alert("数据请求异常！")
-              alert.log("没有找到轨迹数据！")
-              hasMore = false;
-              return;
-            }
-
-            if (d.data.carStateList.length === 0) {
-//              alert("已经没有更多数据！")
-              console.log("已经没有更多数据！");
-              hasMore = false;
-              return;
-            }
-
-            if (params.page_no * params.page_size >= total) {
+              console.log("没有找到轨迹数据！")
               hasMore = false;
               return;
             }
 
             var pathRoutes = [];
-            var item
-            for (var i = 0, len = d.data.carStateList.length; i < len; i++) {
-              item = d.data.carStateList[i];
-              if (typeof(item.longitude) !== 'undefined' && typeof(item.latitude) !== 'undefined'
-                  && item.longitude !== null && item.latitude !== null && item.longitude > 0
-                  && item.latitude > 0) {
-                var posArray = coordtransform.wgs84togcj02(item.longitude, item.latitude);
-                if (isInChina(posArray)) {
-                  pathRoutes.push(posArray);
+            var item;
+
+            for (var routeFlag = 0, routeLen = total; routeFlag < routeLen; routeFlag++) {
+              for (var i = 0, len = d.data.paceList[routeFlag].recordList.length; i < len; i++) {
+                item = d.data.paceList[routeFlag].recordList[i];
+                if (typeof(item.longitude) !== 'undefined' && typeof(item.latitude) !== 'undefined'
+                    && item.longitude !== null && item.latitude !== null && item.longitude > 0
+                    && item.latitude > 0) {
+                  pathRoutes.push(coordtransform.wgs84togcj02(item.longitude, item.latitude));
                 }
               }
+              if (pathRoutes.length === 0) {
+//              alert("没有更多GPS数据！");
+                console.log("该route没有更多GPS数据！");
+                continue;
+              }
+
+              //追加至path数组
+              pathObjectArray[0].path = pathObjectArray[0].path.concat(pathRoutes);
             }
-            if (pathRoutes.length === 0) {
+
+            if (pathObjectArray[0].path.length === 0) {
 //              alert("没有更多GPS数据！");
               console.log("没有更多GPS数据！");
               return;
             }
 
-            if (isFirstLoad) {
-              isFirstLoad = false;
-              //设置path数组
-              pathObjectArray[0].path = pathObjectArray[0].path.concat(pathRoutes);
+            pathSimplifierIns.setData(pathObjectArray);
 
-              pathSimplifierIns.setData(pathObjectArray);
-
-              //initRoutesContainer(d);
-
-              //创建一个巡航器
-              navg = pathSimplifierIns.createPathNavigator(0, {
+            //创建一个巡航器
+            navg = pathSimplifierIns.createPathNavigator(0, {
 //              loop: true,
-                speed: 1000,
-                pathNavigatorStyle: {
-                  width: 16,
-                  height: 32,
-                  content: PathSimplifier.Render.Canvas.getImageContent('/img/car.png', onload,
-                      onerror),
-                  strokeStyle: null,
-                  fillStyle: null,
-                }
-              });
-
-              navg.start();
-
-            } else {
-              var cursor = navg.getCursor().clone(), //保存巡航器的位置
-                  status = navg.getNaviStatus();
-
-              pathObjectArray[0].path = pathObjectArray[0].path.concat(pathRoutes);
-              pathSimplifierIns.setData(pathObjectArray); //延展路径
-
-              //重新建立一个巡航器
-              navg = pathSimplifierIns.createPathNavigator(0, {
-                //loop: true, //循环播放
-                speed: 1000 //巡航速度，单位千米/小时
-                , pathNavigatorStyle: {
-                  width: 16,
-                  height: 32,
-                  content: PathSimplifier.Render.Canvas.getImageContent('/img/car.png', onload,
-                      onerror),
-                  strokeStyle: null,
-                  fillStyle: null,
-                }
-              });
-
-              if (status !== 'stop') {
-                navg.start();
+              speed: 1000,
+              pathNavigatorStyle: {
+                width: 16,
+                height: 32,
+                content: PathSimplifier.Render.Canvas.getImageContent('/img/car.png', onload,
+                    onerror),
+                strokeStyle: null,
+                fillStyle: null,
+                //经过路径的样式
               }
+            });
 
-              //恢复巡航器的位置
-              if (cursor.idx >= 0) {
-                navg.moveToPoint(cursor.idx, cursor.tail);
-              }
-            }
+            navg.start();
           }
       );
     }
@@ -371,30 +318,54 @@
           return false;
         }
 
-        params.page_no++;
+        var cursor = navg.getCursor().clone(), //保存巡航器的位置
+            status = navg.getNaviStatus();
 
-        $('<div id="loadingTip">加载数据，请稍候...</div>').appendTo(document.body);
+        pathObjectArray[0].path = pathObjectArray[0].path.concat(pathRoutes);
+        pathSimplifierIns.setData(pathObjectArray); //延展路径
 
-        loadData();
+        //重新建立一个巡航器
+        navg = pathSimplifierIns.createPathNavigator(0, {
+          //loop: true, //循环播放
+          speed: 1000 //巡航速度，单位千米/小时
+          , pathNavigatorStyle: {
+            width: 16,
+            height: 32,
+            content: PathSimplifier.Render.Canvas.getImageContent('/img/car.png', onload,
+                onerror),
+            strokeStyle: null,
+            fillStyle: null,
+            //经过路径的样式
+            pathLinePassedStyle: {
+              lineWidth: 6,
+              strokeStyle: 'blue',
+              dirArrowStyle: {
+                stepSpace: 15,
+                strokeStyle: 'red'
+              }
+            }
+          }
+        });
+
+        if (status !== 'stop') {
+          navg.start();
+        }
+
+        //恢复巡航器的位置
+        if (cursor.idx >= 0) {
+          navg.moveToPoint(cursor.idx, cursor.tail);
+        }
 
         return true;
       }
 
       if (doExpand()) {
-        setTimeout(expandPath, 10 * 1000);
+        setTimeout(expandPath, 3 * 1000);
       }
     }
-  });
 
-  //是否在中国境内
-  function isInChina(posn) {
-    if (posn != null && posn != "" && posn.length > 0) {
-      return boundsChina.contains(new AMap.LngLat(posn[0], posn[1]));
-    }
-    else {
-      return false;
-    }
-  };
+//    expandPath();
+  });
 </script>
 </body>
 
