1、add author 相关

--- a/vc-web/vc-web-front/src/main/resources/static/index.html
+++ b/vc-web/vc-web-front/src/main/resources/static/index.html
@@ -40,7 +40,24 @@
 						<div class="img-box">
 							<img src="/img/Page1.png">
 						</div>
-
+						<li>
+							<a href="#">
+								<i class="fa fa-home"></i>
+								<span class="nav-label">权限配置</span>
+								<span class="fa arrow"></span>
+							</a>
+							<ul class="nav nav-second-level">
+								<li>
+									<a class="J_menuItem" href="auth/user/index.html">用户信息</a>
+								</li>
+								<li>
+									<a class="J_menuItem" href="auth/group/index.html">角色组信息</a>
+								</li>
+								<li>
+									<a class="J_menuItem" href="auth/modelMapping/index.html">主机厂用户车型关联信息</a>
+								</li>
+							</ul>
+						</li>
 						<li>
 							<a href="#">
 								<i class="fa fa-home"></i>
