--- a/vc-web/vc-web-front/src/main/resources/public/auth/modelMapping/index_query.html
+++ b/vc-web/vc-web-front/src/main/resources/public/auth/modelMapping/index_query.html
@@ -15,7 +15,7 @@
 <dl cond="userId" >
 				<dt>主机厂用户</dt>
 				<dd  >
-					<input  name="userIdEquals" placeholder="请输入关键字" class="form-control searchinput"  dataWhere=""  dataUrl="/auth/user/query">
+					<input  name="userIdEquals" placeholder="请输入关键字" class="form-control searchinput"  dataWhere="8"  dataUrl="/auth/user/query">
 				</dd>
 			</dl>
 <dl cond="modelId" >
