--- a/vc-web/vc-web-front/src/main/resources/public/auth/modelMapping/edit.html
+++ b/vc-web/vc-web-front/src/main/resources/public/auth/modelMapping/edit.html
@@ -30,7 +30,7 @@
 				<dl  >
 					<dt>主机厂用户</dt>
 					<dd>
-					<input name="userId" placeholder="" class="form-control searchinput" dataWhere=""  dataUrl="/auth/user/query">
+					<input name="userId" placeholder="" class="form-control searchinput" dataWhere="8"  dataUrl="/auth/user/query">
 				<label id="userId-error" class="error" for="userId"><i class="fa fa-info-circle fieldTip">必填</i></label>
 					</dd>
 				</dl>
