添加众泰主机厂追溯系统车辆推送功能。

--- a/vc-web/vc-web-front/src/main/resources/public/auth/modelMapping/add.html
+++ b/vc-web/vc-web-front/src/main/resources/public/auth/modelMapping/add.html
@@ -63,7 +63,7 @@
 	<script src="/js/plugins/suggest/bootstrap-suggest.min.js"></script>
 	<script src="/js/plugins/iCheck/icheck.min.js"></script>
 	<script src="/js/plugins/chosen/chosen.jquery.js"></script>
-	<script src="/js/plugins/validate/jquery.validate.min.js"></script>
+	<script src="/js/plugins/validate/jquery.validate.min.js?v=11"></script>
     <script src="/js/plugins/validate/messages_zh.min.js"></script>
     <script src="/js/layer/layer.js"></script>
 	
