--- a/vc-web/vc-web-front/src/main/resources/static/index.html
+++ b/vc-web/vc-web-front/src/main/resources/static/index.html
@@ -54,7 +54,7 @@
 									<a class="J_menuItem" href="auth/group/index.html">角色组信息</a>
 								</li>
 								<li>
-									<a class="J_menuItem" href="auth/modelMapping/index.html">主机厂用户车型关联信息</a>
+									<a class="J_menuItem" href="auth/modelMapping/index.html">主机厂用户车型关联</a>
 								</li>
 							</ul>
 						</li>
