--- a/vc-web/vc-web-front/src/main/resources/public/admin/vehicle/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/vehicle/index_list2.html
@@ -38,10 +38,14 @@
 				        <li><label><input value="csvCertific" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >合格证号</label></li>
 				        <li><label><input value="csvModelText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车型</label></li>
 				        <li><label><input value="csvMachineText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车机设备</label></li>
-				        <li><label><input value="csvColorCodeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >颜色</label></li>
+				        <li><label><input value="csvColorCodeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车身颜色</label></li>
 				        <li><label><input value="csvBataccuCode" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >可充电储能系统编码</label></li>
 				        <li><label><input value="csvProdDate" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >出厂日期</label></li>
 				        <li><label><input value="csvLandmarkText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >地标类型</label></li>
+				        <li><label><input value="csvDomainText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车辆领域</label></li>
+				        <li><label><input value="csvModelCodeFull" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车型代码</label></li>
+				        <li><label><input value="csvModelCodeSimple" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车型备案号</label></li>
+				        <li><label><input value="csvInteriorColorCode" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >内饰颜色</label></li>
 				        <li><label><input value="csvStatusText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >状态</label></li>
 				        <li><label><input value="csvAddTime" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >添加时间</label></li>
 				        <li><label><input value="csvUpdateTime" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >修改时间</label></li>
@@ -195,10 +199,14 @@
 	  		,{field: "csvCertific", title: "合格证号", width: 110, sort:true}
 	  		,{field: "csvModelText", title: "车型", width: 110, sort:true}
 	  		,{field: "csvMachineText", title: "车机设备", width: 110, sort:true}
-	  		,{field: "csvColorCodeText", title: "颜色", width: 110, sort:true}
+	  		,{field: "csvColorCodeText", title: "车身颜色", width: 110, sort:true}
 	  		,{field: "csvBataccuCode", title: "可充电储能系统编码", width: 110, sort:true}
 	  		,{field: "csvProdDate", title: "出厂日期", width: 110, sort:true}
 	  		,{field: "csvLandmarkText", title: "地标类型", width: 110, sort:true}
+	  		,{field: "csvDomainText", title: "车辆领域", width: 110, sort:true}
+	  		,{field: "csvModelCodeFull", title: "车型代码", width: 110, sort:true}
+	  		,{field: "csvModelCodeSimple", title: "车型备案号", width: 110, sort:true}
+	  		,{field: "csvInteriorColorCode", title: "内饰颜色", width: 110, sort:true}
 	  		,{field: "csvStatusText", title: "状态", width: 110, sort:true}
 	  		,{field: "csvAddTime", title: "添加时间", width: 110, sort:true}
 	  		,{field: "csvUpdateTime", title: "修改时间", width: 110, sort:true}
