修改登陆小bug

--- a/vc-web/vc-web-front/src/main/resources/static/login_v2.html
+++ b/vc-web/vc-web-front/src/main/resources/static/login_v2.html
@@ -66,6 +66,8 @@
 <script src="js/jquery.min.js?v=2.1.4"></script>
 <script src="js/bootstrap.min.js?v=3.3.5"></script>
 <script src="js/content.min.js?v=1.0.0"></script>
+<script src="js/tpui-core.js"></script>
+
 <script src="js/plugins/sweetalert/sweetalert.min.js"></script>
 
 <script>
