--- a/vc-web/vc-web-front/src/main/resources/static/index.html
+++ b/vc-web/vc-web-front/src/main/resources/static/index.html
@@ -40,128 +40,7 @@
 						<div class="img-box">
 							<img src="/img/Page1.png">
 						</div>
-						<li>
-							<a href="#">
-								<i class="fa fa-home"></i>
-								<span class="nav-label">权限配置</span>
-								<span class="fa arrow"></span>
-							</a>
-							<ul class="nav nav-second-level">
-								<li>
-									<a class="J_menuItem" href="auth/user/index.html">用户信息</a>
-								</li>
-								<li>
-									<a class="J_menuItem" href="auth/group/index.html">角色组信息</a>
-								</li>
-								<li>
-									<a class="J_menuItem" href="auth/modelMapping/index.html">主机厂用户车型关联</a>
-								</li>
-							</ul>
-						</li>
-						<li>
-							<a href="#">
-								<i class="fa fa-home"></i>
-								<span class="nav-label">基础信息</span>
-								<span class="fa arrow"></span>
-							</a>
-							<ul class="nav nav-second-level">
-								<li>
-									<a class="J_menuItem" href="base/dict/index.html">字典管理</a>
-								</li>
-								<li>
-									<a class="J_menuItem" href="base/access/index.html">接入商管理</a>
-								</li>
-							</ul>
-						</li>
-
-						<li>
-							<a href="#">
-								<i class="fa fa-home"></i>
-								<span class="nav-label">车辆管理</span>
-								<span class="fa arrow"></span>
-							</a>
-							<ul class="nav nav-second-level">
-								<li>
-									<a class="J_menuItem" href="admin/model/index.html">车型管理</a>
-								</li>
-								<li>
-									<a class="J_menuItem" href="admin/vehicle/index.html?v=2">车辆管理</a>
-								</li>
-							</ul>
-						</li>
-
-						<li>
-							<a href="#">
-								<i class="fa fa-home"></i>
-								<span class="nav-label">T-box管理</span>
-								<span class="fa arrow"></span>
-							</a>
-							<ul class="nav nav-second-level">
-								<li>
-									<a class="J_menuItem" href="admin/machine/index.html">T-box管理</a>
-								</li>
-							</ul>
-						</li>
-
-						<li>
-							<a href="#">
-								<i class="fa fa-home"></i>
-								<span class="nav-label">车辆控制管理</span>
-								<span class="fa arrow"></span>
-							</a>
-							<ul class="nav nav-second-level">
-								<li>
-									<a class="J_menuItem" href="control/struct/index.html">车辆控制指令</a>
-								</li>
-							</ul>
-						</li>
-
-						<li>
-							<a href="#">
-								<i class="fa fa-home"></i>
-								<span class="nav-label">监控管理</span>
-								<span class="fa arrow"></span>
-							</a>
-							<ul class="nav nav-second-level">
-								<li>
-									<a class="J_menuItem" href="monitor/register/index.html">TBox注册信息</a>
-								</li>
-								<li>
-									<a class="J_menuItem" href="monitor/state/index.html">车辆实时状态信息</a>
-								</li>
-								<li>
-									<a class="J_menuItem" href="monitor/map/vehiclemonitor.html">车辆地图监控</a>
-								</li>
-								<li>
-									<a class="J_menuItem" href="monitor/can/index.html">车辆实时CAN信息</a>
-								</li>
-								<li>
-									<a class="J_menuItem" href="###">车辆历史数据</a>
-								</li>
-								<li>
-									<a class="J_menuItem" href="###">车辆历史CAN数据</a>
-								</li>
-								<li>
-									<a class="J_menuItem" href="monitor/map/history.html">车辆历史轨迹</a>
-								</li>
-							</ul>
-						</li>
-
-						<li>
-							<a href="#">
-								<i class="fa fa-home"></i>
-								<span class="nav-label">新能源车监控管理</span>
-								<span class="fa arrow"></span>
-							</a>
-							<ul class="nav nav-second-level">
-								<li>
-									<a class="J_menuItem" href="###">新能源车实时数据</a>
-								</li>
-								<li>
-									<a class="J_menuItem" href="###">新能源车历史数据</a>
-								</li>
-							</ul>
-						</li>
+						<!-- 加载菜单 -->
 					</ul>
 				</div>
 			</nav>
