--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_list2.html
@@ -23,7 +23,6 @@
 				 		<span class="caret"></span>
 				 	</button>
 					<ul class="dropdown-menu tableMenu showHideMenu" role="menu">
-				        <li><label><input value="carStateHistoryId"  type="checkbox" onclick='showHideColumn(this, this.value);' >ID</label></li>
 				        <li><label><input value="csNumber" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车机号</label></li>
 				        <li><label><input value="csAccess" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >授权系统</label></li>
 				        <li><label><input value="addTime" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >添加时间</label></li>
@@ -80,7 +79,35 @@
 	</div>
 
 <script src="/layui/layui.all.js?t=1510164124207"></script>
+<script src="/js/moment.js"></script>
 <script type="text/javascript">
+  var $csNumber = $("input[name='csNumberEquals']");
+  var $startTime = $("input[name='currentTimeStart']");
+  var $endTime = $("input[name='currentTimeEnd']");
+
+  function checkParams() {
+    if ($csNumber.val() === '' || typeof($csNumber.val()) === 'undefined') {
+      layer.msg('请选择一个车机号', {icon: 7, time: 1600});
+      return false;
+    }
+
+    if ($startTime.val() === '' || typeof($startTime.val()) === 'undefined') {
+      layer.msg('请选择开始时间', {icon: 7, time: 1600});
+      return false;
+    }
+
+    if ($endTime.val() === '' || typeof($endTime.val()) === 'undefined') {
+      layer.msg('请选择结束时间', {icon: 7, time: 1600});
+      return false;
+    }
+
+      if (moment($startTime.val()).diff(moment($endTime.val()), 'seconds') >= 0) {
+        layer.msg('结束时间应该比开始时间大', {icon: 7, time:1600});
+        return false;
+      }
+
+    return true;
+  }
 
 	var operate = {
 		getGrid:function(){
@@ -93,11 +120,12 @@
 			return $(".btn-group");
 		},
 		query:function(){
+      if (!checkParams()) {
+        return;
+      }
 			grid.reloadData({where:getFormData(this.getQueryForm())});
 		},
-		
-		
-		
+
 		batchDel:function(){
 			var o = this;
 			var ids = grid.getSelectIds();
@@ -134,49 +162,48 @@
 
 	var tableId = "THistoryState";
 	var clms = [{checkbox: true}
-	  		,{field: "csNumber", title: "车机号", width: 110, sort:true}
-	  		,{field: "csAccess", title: "授权系统", width: 110, sort:true}
-	  		,{field: "addTime", title: "添加时间", width: 110, sort:true}
-	  		,{field: "currentTime", title: "下位机时间", width: 110, sort:true}
-	  		,{field: "rentFlg", title: "租赁状态", width: 110, sort:true}
-	  		,{field: "warnCode", title: "报警代码", width: 110, sort:true}
-	  		,{field: "rfid", title: "RFID卡号", width: 110, sort:true}
-	  		,{field: "userRfid", title: "用户RFID", width: 110, sort:true}
-	  		,{field: "obdMiles", title: "OBD里程", width: 110, sort:true}
-	  		,{field: "engineTempe", title: "发动机温度", width: 110, sort:true}
-	  		,{field: "totalMiles", title: "总里程", width: 110, sort:true}
-	  		,{field: "speed", title: "车速", width: 110, sort:true}
-	  		,{field: "motorSpeed", title: "转速", width: 110, sort:true}
-	  		,{field: "oilCost", title: "燃油量", width: 110, sort:true}
-	  		,{field: "powerReserve", title: "蓄电量", width: 110, sort:true}
-	  		,{field: "evBattery", title: "动力电池电量", width: 110, sort:true}
-	  		,{field: "chargingStatus", title: "充电状态", width: 110, sort:true}
-	  		,{field: "fuelMiles", title: "油里程", width: 110, sort:true}
-	  		,{field: "elecMiles", title: "电量程", width: 110, sort:true}
-	  		,{field: "endurMiles", title: "续航里程", width: 110, sort:true}
-	  		,{field: "tempe", title: "温度", width: 110, sort:true}
-	  		,{field: "gpsNum", title: "卫星数量", width: 110, sort:true}
-	  		,{field: "gpsStrength", title: "卫星信号强度", width: 110, sort:true}
-	  		,{field: "gpsValid", title: "gps有效性", width: 110, sort:true}
-	  		,{field: "netStrength", title: "网络信号强度", width: 110, sort:true}
-	  		,{field: "longitude", title: "经度", width: 110, sort:true}
-	  		,{field: "latitude", title: "纬度", width: 110, sort:true}
-	  		,{field: "directionAngle", title: "方向角度", width: 110, sort:true}
-	  		,{field: "circularMode", title: "循环模式", width: 110, sort:true}
-	  		,{field: "ptcStatus", title: "PTC启停", width: 110, sort:true}
-	  		,{field: "compreStatus", title: "压缩机状态", width: 110, sort:true}
-	  		,{field: "fanMode", title: "档风量", width: 110, sort:true}
-	  		,{field: "savingMode", title: "省电模式", width: 110, sort:true}
-	  		,{field: "doorStatus", title: "车门状态", width: 110, sort:true}
-	  		,{field: "engineStatus", title: "发动机", width: 110, sort:true}
-	  		,{field: "keyStatus", title: "钥匙状态", width: 110, sort:true}
-	  		,{field: "lightStatus", title: "灯状态", width: 110, sort:true}
-	  		,{field: "lockStatus", title: "锁状态", width: 110, sort:true}
-	  		,{field: "netType", title: "网络类型", width: 110, sort:true}
-	  		,{field: "baseLac", title: "基站LAC", width: 110, sort:true}
-	  		,{field: "baseCi", title: "基站CI", width: 110, sort:true}
-	  		,{field: "curOrder", title: "当前订单", width: 110, sort:true}
-      		,{field: 'operate', title: '操作', width: 40, fixed:'right', toolbar: '#gridToolBar'}
+	  		,{field: "csNumber", title: "车机号", width: 110}
+	  		,{field: "csAccess", title: "授权系统", width: 110}
+	  		,{field: "addTime", title: "添加时间", width: 110}
+	  		,{field: "currentTime", title: "下位机时间", width: 110}
+	  		,{field: "rentFlg", title: "租赁状态", width: 110}
+	  		,{field: "warnCode", title: "报警代码", width: 110}
+	  		,{field: "rfid", title: "RFID卡号", width: 110}
+	  		,{field: "userRfid", title: "用户RFID", width: 110}
+	  		,{field: "obdMiles", title: "OBD里程", width: 110}
+	  		,{field: "engineTempe", title: "发动机温度", width: 110}
+	  		,{field: "totalMiles", title: "总里程", width: 110}
+	  		,{field: "speed", title: "车速", width: 110}
+	  		,{field: "motorSpeed", title: "转速", width: 110}
+	  		,{field: "oilCost", title: "燃油量", width: 110}
+	  		,{field: "powerReserve", title: "蓄电量", width: 110}
+	  		,{field: "evBattery", title: "动力电池电量", width: 110}
+	  		,{field: "chargingStatus", title: "充电状态", width: 110}
+	  		,{field: "fuelMiles", title: "油里程", width: 110}
+	  		,{field: "elecMiles", title: "电量程", width: 110}
+	  		,{field: "endurMiles", title: "续航里程", width: 110}
+	  		,{field: "tempe", title: "温度", width: 110}
+	  		,{field: "gpsNum", title: "卫星数量", width: 110}
+	  		,{field: "gpsStrength", title: "卫星信号强度", width: 110}
+	  		,{field: "gpsValid", title: "gps有效性", width: 110}
+	  		,{field: "netStrength", title: "网络信号强度", width: 110}
+	  		,{field: "longitude", title: "经度", width: 110}
+	  		,{field: "latitude", title: "纬度", width: 110}
+	  		,{field: "directionAngle", title: "方向角度", width: 110}
+	  		,{field: "circularMode", title: "循环模式", width: 110}
+	  		,{field: "ptcStatus", title: "PTC启停", width: 110}
+	  		,{field: "compreStatus", title: "压缩机状态", width: 110}
+	  		,{field: "fanMode", title: "档风量", width: 110}
+	  		,{field: "savingMode", title: "省电模式", width: 110}
+	  		,{field: "doorStatus", title: "车门状态", width: 110}
+	  		,{field: "engineStatus", title: "发动机", width: 110}
+	  		,{field: "keyStatus", title: "钥匙状态", width: 110}
+	  		,{field: "lightStatus", title: "灯状态", width: 110}
+	  		,{field: "lockStatus", title: "锁状态", width: 110}
+	  		,{field: "netType", title: "网络类型", width: 110}
+	  		,{field: "baseLac", title: "基站LAC", width: 110}
+	  		,{field: "baseCi", title: "基站CI", width: 110}
+	  		,{field: "curOrder", title: "当前订单", width: 110}
     ];
 
 	var option = {
@@ -224,7 +251,6 @@
 	function getTableHeight(){
 		 var height = $(window).height() - ($(".queryForm_wrapper").height()+$(".menubar").height() + 25);
 //		 if(height>1000)return 1000;
-		console.log(height);
 		 return height;
 	}
 
